Finished Pro Referral Case Study.

--- a/projects/cfnapa.html
+++ b/projects/cfnapa.html
@@ -9,7 +9,7 @@
     <script src="<% assetPath %>/js/main.js" defer></script>
 </head>
 <body>
-    <header class="Header is-projectPage">
+    <header class="Header Header--CFN is-projectPage">
         <section class="Header-container">
             <a class="Header-logo" href="/"><h1 class="Header-name">Eric Skram</h1></a>
             <ul class="Nav">
