--- a/projects/proreferral.html
+++ b/projects/proreferral.html
@@ -2,9 +2,164 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Pro Referral // Eric Skram</title>
+    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
+    <link rel="stylesheet" href="<% assetPath %>/css/main.css">
 </head>
 <body>
-    woop woop mofucking perferral
+    <header class="Header Header--ProReferral is-projectPage">
+        <section class="Header-container">
+            <a class="Header-logo" href="/"><h1 class="Header-name">Eric Skram</h1></a>
+            <ul class="Nav">
+                <li class="Nav-item"><a class="Nav-link" href="/">Work</a></li>
+                <!-- <li class="Nav-item"><a class="Nav-link" href="#">Blog</a></li> -->
+            </ul>
+        </section>
+    </header>
+    <div class="Content">
+        <div class="Project-heading">
+            <div class="Project-hero Project-hero--ProReferral"></div>
+        </div>
+        <div class="Project-body">
+            <div class="Overview">
+                <blockquote class="Overview-summary">
+                    <p>Pro Referral is where homeowners can get help with complete confidence that the job will be done right. It's where home service professionals can go to get more than just leads. These pros can trust us to save them time, money and energy in finding homeowners who need them.</p>
+                </blockquote>
+                <div class="Overview-scope">
+                    <h3 class="Overview-title">Scope</h3>
+                    <p class="Overview-item">Responsive Web, iOS &amp; Android apps, prototypes, style guides</p>
+                    <h3 class="Overview-title">Tools</h3>
+                    <p class="Overview-item">Sketch, Principle, Flinto, Zeplin, Photoshop</p>
+                    <a class="Overview-siteLink Overview-siteLink--ProReferral" href="http://www.proreferral.com" target="_blank">Visit Live Site</a>
+                </div>
+            </div>
+
+            <section class="Project-block Project-block--fw PRPro">
+                <div class="PRPro-container">
+                    <h2 class="Project-block-title PRPro-title">The <span class="PRPro-title--orange">Pro</span> is the Show</h2>
+                </div>
+                <div class="PRPro-container">
+                    <div class="PRPro-description">
+                        <p>I was responsible for the &lsquo;Pro&rsquo; part of Pro Referral. Simplicity was the encompassing theme in designing the experience, since Pros want to spend as little time possible managing their jobs - and more time out doing them.</p>
+                        <!-- <p>I was responsible for the &lsquo;Pro&rsquo; part of Pro Referral. The experience was rebuild from the ground-up to accompany the new consumer-facing product. Now, pros can more easily manage all of their jobs and leads in one place.</p> -->
+                        <!-- <p>Simplicity was the encompassing theme in designing the experience. Pros want to spend as little time possible managing their jobs, so they can spend more time out doing them.</p> -->
+                        <!-- <p>The Pro Referral App is available on the App Store and Google Play Store, alongside a fully-featured web interface. I also created style guides to ensure design consistency across all platforms.</p> -->
+                    </div>
+                </div>
+            </section>
+            <!-- <section class="Project-block Project-block--fw PRProApp">
+                <div class="PRProApp-container">
+                    <img class="PRProApp-logoMark" src="<% assetPath %>/images/ProReferral-Case-AppIcon.svg" alt="">
+                    <h2 class="Project-block-title PRProApp-title">Pro App</h2>
+                </div>
+            </section> -->
+            <section class="Project-block PRProDashboard">
+
+                <h2 class="Project-block-title PRProDashboard-title">The Dashboard</h2>
+                <div class="PRProDashboard-description">
+                    <p>When a Pro launches the app, they are greeted by a high-level view of everything new with their business. It shows any new job requests that they've received since last vising the app, as well as any unread activity from customers.</p>
+                    <!-- <p>As the design progressed from low-fidelity wireframe to high-fidelity mock, I tried to simplify the design wherever possible. One feature that started as a fun easter-egg, but became a fundamental part of the experience was the customer's colored avatar. When a customer submits a lead, they are assigned a unique color, which is shown to the pro as their avatar. This color persists across the complete lifecycle of the job, so the pro will learn over time to associate the color with a particular customer.</p> -->
+                </div>
+                <div class="PRProDashboard-web">
+                    <img src="<% assetPath %>/images/ProReferral-Case-WebDashboard.png" alt="">
+                </div>
+                <div id="PRProDashboard-app" class="PRProDashboard-app">
+                    <img src="<% assetPath %>/images/ProReferral-Case-AppDashboardHigh.png" alt="">
+                </div>
+                <!-- <div id="PRProDashboard-list" class="PRProDashboard-list">
+                    <div class="PRProDashboard-mock PRProDashboard-mock--low">
+                        <img src="<% assetPath %>/images/ProReferral-Case-AppDashboardLow.png" alt="">
+                    </div>
+                    <div class="PRProDashboard-spacer">
+                        <img class="PRProDashboard-arrow" src="<% assetPath %>/images/ProReferral-Case-ProgressionArrow.svg" alt="">
+                    </div>
+                    <div class="PRProDashboard-mock PRProDashboard-mock--mid">
+                        <img src="<% assetPath %>/images/ProReferral-Case-AppDashboardMid.png" alt="">
+                    </div>
+                    <div class="PRProDashboard-spacer">
+                        <img class="PRProDashboard-arrow" src="<% assetPath %>/images/ProReferral-Case-ProgressionArrow.svg" alt="">
+                    </div>
+                    <div class="PRProDashboard-mock PRProDashboard-mock--high">
+                        <img src="<% assetPath %>/images/ProReferral-Case-AppDashboardHigh.png" alt="">
+                    </div>
+                </div> -->
+            </section>
+            <section class="Project-block PRProAppTriage">
+                <h2 class="Project-block-title PRProAppTriage-title">Lead Triage</h2>
+                <div class="PRProAppTriage-description">
+                    <p>When a Pro receives a new lead, they can quickly evaluate whether it's something they're interested pursuing. From there, they can either pass or follow up with the customer.</p>
+                </div>
+                <div class="PRProAppTriage-list">
+                    <div id="PRProAppTriage-Card" class="PRProAppTriage-mock">
+                        <img src="<% assetPath %>/images/ProReferral-Case-Triage.png" alt="">
+                    </div>
+                    <div id="PRProAppTriage-Card" class="PRProAppTriage-mock PRProAppTriage-mock--followUp">
+                        <img src="<% assetPath %>/images/ProReferral-Case-TriageFollowUp.png" alt="">
+                    </div>
+                    <div class="PRProAppTriage-mock PRProAppTriage-mock--pass">
+                        <img src="<% assetPath %>/images/ProReferral-Case-TriagePass.png" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class="Project-block PRProAppMessaging">
+                <div class="PRProAppMessaging-description">
+                    <h2 class="Project-block-title PRProAppMessaging-title">Messaging</h2>
+                    <p>Pros can hold a conversation with the consumer, quickly reference job details and keep track of the job's status through the messaging screen. They can also schedule appointments and set reminders when an appointment is approaching.</p>
+                </div>
+                <div class="PRProAppMessaging-mock">
+                    <img src="<% assetPath %>/images/ProReferral-Case-WebMessaging.png" alt="">
+                </div>
+            </section>
+
+            <section class="Project-block PRProAppStyleGuide">
+                <div class="PRProAppStyleGuide-description">
+                    <h2 class="Project-block-title PRProAppStyleGuide-title">Style Guide / UI Kit</h2>
+                    <p>As part of building the experience on web and app, I created a UI toolkit for designers and helped build the corresponding living style guide for web. The guide includes typography, UI components, iconography, colors and boilerplate code for easings / microinteractions. It is now powering the Pro experience and is being rolled out on the Consumer experience as well.</p>
+                </div>
+                <div id="PRProAppStyleGuide-mock" class="PRProAppStyleGuide-mock">
+                    <img class="PRProAppStyleGuide-screen isActive" src="<% assetPath %>/images/ProReferral-Case-DesignKit1.png" alt="">
+                    <img class="PRProAppStyleGuide-screen" src="<% assetPath %>/images/ProReferral-Case-DesignKit2.png" alt="">
+                    <img class="PRProAppStyleGuide-screen" src="<% assetPath %>/images/ProReferral-Case-DesignKit3.png" alt="">
+                </div>
+            </section>
+        </div>
+    </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="<% assetPath %>/js/main.js"></script>
+<script>
+function cycleImages() {
+    var $active = $('#PRProAppStyleGuide-mock .isActive');
+    var $next = ($active.next().length > 0) ? $active.next() : $('#PRProAppStyleGuide-mock img:first');
+    $next.css('z-index',2);
+    $active.fadeOut(500, function() {
+        $active.css('z-index',1).show().removeClass('isActive');
+        $next.css('z-index',3).addClass('isActive');
+    });
+}
+
+$(document).ready(function(){
+    setInterval('cycleImages()', 3000);
+    var PRProDashboardFirst = true;
+    var PRProDashboardPos = 0;
+    $(window).scroll(function () {
+        if($('#PRProDashboard-app').visible( true )) {
+            if(PRProDashboardFirst) {
+                PRProDashboardPos = $(window).scrollTop();
+                PRProDashboardFirst = false;
+            }
+            else {
+                var diff = $(window).scrollTop() - PRProDashboardPos;
+                if(diff < 600) {
+                    var transformVal = 64 - (diff/10);
+                    $('#PRProDashboard-app').css({"transform":"translate3d(0, " + transformVal + "px, 0)"});
+                }
+            }
+            // var scrollVal = $(window).scrollTop();
+            // var transformVal = 192 - (scrollVal/12);
+            // $('#PRProDashboard-app').css({"transform":"translateY(" + transformVal + "px)"});
+        }
+    })
+});
+</script>
 </html>
