--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Eric Skram</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
     <link rel="stylesheet" href="<% assetPath %>/css/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
-    <script src="<% assetPath %>/js/main.js" defer></script>
 </head>
 <body>
     <header class="Header">
@@ -81,14 +79,8 @@
                 </a>
             </li>
         </ul>
-        <!-- <div class="ExpandTestWrapper">
-            <div data-row="Search-Results" class="ExpandImg">
-                <img src="<% assetPath %>/images/Registration-Search-Results.jpg" alt="">
-            </div>
-            <div data-row="Search-Results" class="ExpandOtherShit">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quibusdam non dolorem sit mollitia est. Amet quo inventore repellendus porro illum est cum vel a non quis, pariatur perferendis enim.</p>
-            </div>
-        </div> -->
     </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="<% assetPath %>/js/main.js"></script>
 </html>
