--- a/projects/macys.html
+++ b/projects/macys.html
@@ -5,8 +5,6 @@
     <title>Macy's.com // Eric Skram</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
     <link rel="stylesheet" href="<% assetPath %>/css/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
-    <script src="<% assetPath %>/js/main.js" defer></script>
 </head>
 <body>
     <header class="Header Header--Macys is-projectPage">
@@ -162,4 +160,6 @@
         </div>
     </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="<% assetPath %>/js/main.js"></script>
 </html>
