Fix un-responsive layouts, update css file extensions for better syntax highlighting.

--- a/projects/cfnapa.html
+++ b/projects/cfnapa.html
@@ -24,7 +24,9 @@
                 </div>
             </div>
             <div class="Project-mainPreview Project-mainPreview--CFN">
-                <img src="<% assetPath %>/images/CFN-Case-MainPreview.png" alt="">
+                <div class="Project-mainPreviewContainer">
+                    <img src="<% assetPath %>/images/CFN-Case-MainPreview.png" alt="">
+                </div>
             </div>
         </div>
         <div class="Project-body">
@@ -40,7 +42,9 @@
                 </div>
             </div>
             <section class="Project-block Project-block--hug CFNHome">
-                <img src="<% assetPath %>/images/CFN-Case-Home.jpg" alt="">
+                <div class="CFNHome-item">
+                    <img src="<% assetPath %>/images/CFN-Case-Home.jpg" alt="">
+                </div>
             </section>
             <section class="Project-block CFNSubpages">
                 <div class="CFNSubpages-item">
