--- a/projects/macys.html
+++ b/projects/macys.html
@@ -21,7 +21,7 @@
             <div class="Project-hero Project-hero--Macys"></div>
         </div>
         <div class="Project-body">
-            <div class="Overview">
+            <div class="Overview Overview--noPreview">
                 <blockquote class="Overview-summary">
                     <p>The Treasure Hunt is an concept designed to capitalize on Macy's greatest advantage over other online retailers: its brick-and-mortar stores. It also improves the in-store experience by helping customers easily find products.</p>
                 </blockquote>
