--- a/projects/registration.html
+++ b/projects/registration.html
@@ -23,7 +23,9 @@
                 <div class="Project-hero Project-hero--RegistrationBlurry"></div>
             </div>
             <div class="Project-mainPreview Project-mainPreview--Registration">
-                <img src="<% assetPath %>/images/Registration-Case-MainPreview.png" alt="">
+                <div class="Project-mainPreviewContainer">
+                    <img src="<% assetPath %>/images/Registration-Case-MainPreview.png" alt="">
+                </div>
             </div>
         </div>
         <div class="Project-body">
