--- a/projects/proreferral.html
+++ b/projects/proreferral.html
@@ -21,7 +21,7 @@
             <div class="Project-hero Project-hero--ProReferral"></div>
         </div>
         <div class="Project-body">
-            <div class="Overview">
+            <div class="Overview Overview--noPreview">
                 <blockquote class="Overview-summary">
                     <p>Pro Referral is where homeowners can get help with complete confidence that the job will be done right. It's where home service professionals can go to get more than just leads. These pros can trust us to save them time, money and energy in finding homeowners who need them.</p>
                 </blockquote>
