RC1: Rework home page grid items.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </li>
             <li class="GridItem GridItem--macys">
                 <a class="GridItem-link Macys" href="/projects/macys/">
+                    <div class="Macys-star"></div>
                     <div class="Macys-tooltip"></div>
                     <div class="Macys-bg"></div>
                     <div class="GridItem-info">
