Add global footer and home page tagline. Animation performance improvements through hardware accelerated transitions.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         </section>
     </header>
     <div class="Content">
+        <div class="Tagline">
+            <!-- <h1 class="Tagline-name">Eric Skram</h1> -->
+            <!-- <p class="Tagline-body">UI, UX &amp; Interaction Designer</p> -->
+            <h1 class="Tagline-body">Eric is a UX, UI, &amp; Interaction Designer for Web, iOS and Android.</h1>
+        </div>
         <ul class="ProjectGrid">
             <li class="GridItem GridItem--proreferral">
                 <a class="GridItem-link ProReferral" href="/projects/proreferral/">
@@ -81,6 +86,12 @@
             </li>
         </ul>
     </div>
+    <footer class="Footer">
+        <div class="Footer-legal">&copy; Eric Skram</div>
+        <div class="Footer-links">
+            <a href="mailto:eric@skram.com">Email</a> <span class="Footer-divider">//</span> <a href="https://github.com/Vpr99" target="_blank">Github</a> <span class="Footer-divider">//</span> <a href="https://www.instagram.com/vpr99/" target="_blank">Instagram</a>
+        </div>
+    </footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="<% assetPath %>/js/main.js"></script>
