--- a/projects/registration.html
+++ b/projects/registration.html
@@ -72,8 +72,13 @@
             </section>
         </div>
     </div>
+    <footer class="Footer">
+        <div class="Footer-legal">&copy; Eric Skram</div>
+        <div class="Footer-links">
+            <a href="mailto:eric@skram.com">Email</a> <span class="Footer-divider">//</span> <a href="https://github.com/Vpr99" target="_blank">Github</a> <span class="Footer-divider">//</span> <a href="https://www.instagram.com/vpr99/" target="_blank">Instagram</a>
+        </div>
+    </footer>
 </body>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="<% assetPath %>/js/main.js"></script>
 <script>
