--- a/projects/cfnapa.html
+++ b/projects/cfnapa.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="<% assetPath %>/css/main.css">
 </head>
 <body>
-    <header class="Header Header--CFN is-projectPage">
-        <section class="Header-container">
-            <a class="Header-logo" href="/"><h1 class="Header-name">Eric Skram</h1></a>
-            <ul class="Nav">
-                <li class="Nav-item"><a class="Nav-link" href="/">Work</a></li>
-                <!-- <li class="Nav-item"><a class="Nav-link" href="#">Blog</a></li> -->
-            </ul>
-        </section>
-    </header>
+    <include src="lib/components/header.html"></include>
     <div class="Content">
         <div class="Project-heading">
             <div class="Project-hero Project-hero--CFN">
@@ -56,12 +48,7 @@
             </section>
         </div>
     </div>
-    <footer class="Footer">
-        <div class="Footer-legal">&copy; Eric Skram</div>
-        <div class="Footer-links">
-            <a href="mailto:eric@skram.com">Email</a> <span class="Footer-divider">//</span> <a href="https://github.com/Vpr99" target="_blank">Github</a> <span class="Footer-divider">//</span> <a href="https://www.instagram.com/vpr99/" target="_blank">Instagram</a>
-        </div>
-    </footer>
+    <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="<% assetPath %>/js/main.js"></script>
