Add HTML Hinting to PostHTML.

--- a/projects/proreferral.html
+++ b/projects/proreferral.html
@@ -64,10 +64,10 @@
                     <p>When a Pro receives a new lead, they can quickly evaluate whether it's something they're interested pursuing. From there, they can either pass or follow up with the customer.</p>
                 </div>
                 <div class="PRProAppTriage-list">
-                    <div id="PRProAppTriage-Card" class="PRProAppTriage-mock">
+                    <div class="PRProAppTriage-mock">
                         <img src="<% assetPath %>/images/ProReferral-Case-Triage.png" alt="">
                     </div>
-                    <div id="PRProAppTriage-Card" class="PRProAppTriage-mock PRProAppTriage-mock--followUp">
+                    <div class="PRProAppTriage-mock PRProAppTriage-mock--followUp">
                         <img src="<% assetPath %>/images/ProReferral-Case-TriageFollowUp.png" alt="">
                     </div>
                     <div class="PRProAppTriage-mock PRProAppTriage-mock--pass">
