Simplified PostHTML Config and simplified static asset pathing.

--- a/projects/cfnapa.html
+++ b/projects/cfnapa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>CF Napa // Eric Skram</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
-    <link rel="stylesheet" href="<% assetPath %>/css/main.css">
+    <link rel="stylesheet" href="{{static}}/css/main.css">
 </head>
 <body>
     <include src="lib/components/header.html"></include>
@@ -12,12 +12,12 @@
         <div class="Project-heading">
             <div class="Project-hero Project-hero--CFN">
                 <div class="Project-logoContainer">
-                    <img class="Project-logo" src="<% assetPath %>/images/CFN-Thumb-Logo.svg" alt="">
+                    <img class="Project-logo" src="{{static}}/images/CFN-Thumb-Logo.svg" alt="">
                 </div>
             </div>
             <div class="Project-mainPreview Project-mainPreview--CFN">
                 <div class="Project-mainPreviewContainer">
-                    <img src="<% assetPath %>/images/CFN-Case-MainPreview.png" alt="">
+                    <img src="{{static}}/images/CFN-Case-MainPreview.png" alt="">
                 </div>
             </div>
         </div>
@@ -35,15 +35,15 @@
             </div>
             <section class="Project-block Project-block--hug CFNHome">
                 <div class="CFNHome-item">
-                    <img src="<% assetPath %>/images/CFN-Case-Home.jpg" alt="">
+                    <img src="{{static}}/images/CFN-Case-Home.jpg" alt="">
                 </div>
             </section>
             <section class="Project-block CFNSubpages">
                 <div class="CFNSubpages-item">
-                    <img src="<% assetPath %>/images/CFN-Case-CaseStudy.jpg" alt="">
+                    <img src="{{static}}/images/CFN-Case-CaseStudy.jpg" alt="">
                 </div>
                 <div class="CFNSubpages-item">
-                    <img src="<% assetPath %>/images/CFN-Case-Detail.jpg" alt="">
+                    <img src="{{static}}/images/CFN-Case-Detail.jpg" alt="">
                 </div>
             </section>
         </div>
@@ -51,5 +51,5 @@
     <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="<% assetPath %>/js/main.js"></script>
+<script src="{{static}}/js/main.js"></script>
 </html>
