--- a/projects/macys.html
+++ b/projects/macys.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Macy's.com // Eric Skram</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
-    <link rel="stylesheet" href="<% assetPath %>/css/main.css">
+    <link rel="stylesheet" href="{{static}}/css/main.css">
 </head>
 <body>
     <include src="lib/components/header.html"></include>
@@ -71,7 +71,7 @@
                     </ul>
                 </div>
                 <div class="MacysEpics-flow">
-                    <img src="<% assetPath %>/images/Macys-Case-TaskFlow.png" alt="">
+                    <img src="{{static}}/images/Macys-Case-TaskFlow.png" alt="">
                 </div>
             </section>
             <section class="Project-block Project-block--fw MacysPrototyping">
@@ -91,28 +91,28 @@
                             <h3>Like / Dislike</h3>
                             <span>Swipe left or right to like / dislike the current product.</span>
                         </figcaption>
-                        <img src="<% assetPath %>/images/Macys-Case-Discovery1.png" alt="">
+                        <img src="{{static}}/images/Macys-Case-Discovery1.png" alt="">
                     </figure>
                     <figure class="MacysDiscovery-mock">
                         <figcaption>
                             <h3>Share</h3>
                             <span>Swipe up to share the product on social media.</span>
                         </figcaption>
-                        <img src="<% assetPath %>/images/Macys-Case-Discovery2.png" alt="">
+                        <img src="{{static}}/images/Macys-Case-Discovery2.png" alt="">
                     </figure>
                     <figure class="MacysDiscovery-mock">
                         <figcaption>
                             <h3>Save</h3>
                             <span>Swipe down to save the product to your wishlist.</span>
                         </figcaption>
-                        <img src="<% assetPath %>/images/Macys-Case-Discovery3.png" alt="">
+                        <img src="{{static}}/images/Macys-Case-Discovery3.png" alt="">
                     </figure>
                     <figure class="MacysDiscovery-mock">
                         <figcaption>
                             <h3>More Info</h3>
                             <span>Tap to get additional info and quick actions.</span>
                         </figcaption>
-                        <img src="<% assetPath %>/images/Macys-Case-Discovery4.png" alt="">
+                        <img src="{{static}}/images/Macys-Case-Discovery4.png" alt="">
                     </figure>
                 </div>
             </section>
@@ -123,7 +123,7 @@
                         <p>The majority of negative customer feedback gathered by Macy's revolves around customers not receiving help promptly or not being able to find an associate. We included an &lsquo;assist me&rsquo; feature in the app to combat this. A customer can notify an associate of what they need, or just call directly. </p>
                     </div>
                     <div class="MacysAssistance-mock">
-                        <img src="<% assetPath %>/images/Macys-Case-Assistance.png" alt="">
+                        <img src="{{static}}/images/Macys-Case-Assistance.png" alt="">
                     </div>
                 </div>
             </section>
@@ -131,10 +131,10 @@
                 <h2 class="Project-block-title MacysMapping-title">Finding Products in Store</h2>
                 <div class="MacysMapping-description">
                     <p>A major challenge with department store shopping is finding specific items. Using Bluetooth LE beacons, products can be mapped to individual racks and marked for easy discovery. This, in tandem with RFID tags attached to each item, could provide real-time inventory tracking.</p>
-                    <img src="<% assetPath %>/images/Macys-Case-MapMock.jpg" alt="">
+                    <img src="{{static}}/images/Macys-Case-MapMock.jpg" alt="">
                 </div>
                 <div class="MacysMapping-deviceMock">
-                    <img src="<% assetPath %>/images/Macys-Case-MapPhone.png" alt="">
+                    <img src="{{static}}/images/Macys-Case-MapPhone.png" alt="">
                 </div>
             </section>
             <section class="Project-block MacysRewards">
@@ -143,10 +143,10 @@
                     <p>The wishlist feature on Macy's.com converts very well, but is underutilized and is even supressed on some platforms. Our idea would be very effective working in tandem with the wishlist and could be used to promote it to a broader audience. We introduced a more robust rewards system for items purchased from the wishlist, using both discounts and experiential prizes.</p>
                 </div>
                 <div class="MacysRewards-mock">
-                    <img src="<% assetPath %>/images/Macys-Case-Wishlist.png" alt="">
+                    <img src="{{static}}/images/Macys-Case-Wishlist.png" alt="">
                 </div>
                 <div class="MacysRewards-mock">
-                    <img src="<% assetPath %>/images/Macys-Case-WishlistRewards.png" alt="">
+                    <img src="{{static}}/images/Macys-Case-WishlistRewards.png" alt="">
                 </div>
             </section>
         </div>
@@ -154,5 +154,5 @@
     <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="<% assetPath %>/js/main.js"></script>
+<script src="{{static}}/js/main.js"></script>
 </html>
