--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{test}</title>
+    <title>Eric Skram</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
-    <link rel="stylesheet" href="<% assetPath %>/css/main.css">
+    <link rel="stylesheet" href="{{static}}/css/main.css">
 </head>
 <body>
     <include src="lib/components/header.html"></include>
@@ -81,5 +81,5 @@
      <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="<% assetPath %>/js/main.js"></script>
+<script src="{{static}}/js/main.js"></script>
 </html>
