--- a/projects/proreferral.html
+++ b/projects/proreferral.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Pro Referral // Eric Skram</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
-    <link rel="stylesheet" href="<% assetPath %>/css/main.css">
+    <link rel="stylesheet" href="{{static}}/css/main.css">
 </head>
 <body>
     <include src="lib/components/header.html"></include>
@@ -41,7 +41,7 @@
             </section>
             <!-- <section class="Project-block Project-block--fw PRProApp">
                 <div class="PRProApp-container">
-                    <img class="PRProApp-logoMark" src="<% assetPath %>/images/ProReferral-Case-AppIcon.svg" alt="">
+                    <img class="PRProApp-logoMark" src="{{static}}/images/ProReferral-Case-AppIcon.svg" alt="">
                     <h2 class="Project-block-title PRProApp-title">Pro App</h2>
                 </div>
             </section> -->
@@ -52,10 +52,10 @@
                     <!-- <p>As the design progressed from low-fidelity wireframe to high-fidelity mock, I tried to simplify the design wherever possible. One feature that started as a fun easter-egg, but became a fundamental part of the experience was the customer's colored avatar. When a customer submits a lead, they are assigned a unique color, which is shown to the pro as their avatar. This color persists across the complete lifecycle of the job, so the pro will learn over time to associate the color with a particular customer.</p> -->
                 </div>
                 <div class="PRProDashboard-web">
-                    <img src="<% assetPath %>/images/ProReferral-Case-WebDashboard.png" alt="">
+                    <img src="{{static}}/images/ProReferral-Case-WebDashboard.png" alt="">
                 </div>
                 <div id="PRProDashboard-app" class="PRProDashboard-app">
-                    <img src="<% assetPath %>/images/ProReferral-Case-AppDashboardHigh.png" alt="">
+                    <img src="{{static}}/images/ProReferral-Case-AppDashboardHigh.png" alt="">
                 </div>
             </section>
             <section class="Project-block PRProAppTriage">
@@ -65,13 +65,13 @@
                 </div>
                 <div class="PRProAppTriage-list">
                     <div class="PRProAppTriage-mock">
-                        <img src="<% assetPath %>/images/ProReferral-Case-Triage.png" alt="">
+                        <img src="{{static}}/images/ProReferral-Case-Triage.png" alt="">
                     </div>
                     <div class="PRProAppTriage-mock PRProAppTriage-mock--followUp">
-                        <img src="<% assetPath %>/images/ProReferral-Case-TriageFollowUp.png" alt="">
+                        <img src="{{static}}/images/ProReferral-Case-TriageFollowUp.png" alt="">
                     </div>
                     <div class="PRProAppTriage-mock PRProAppTriage-mock--pass">
-                        <img src="<% assetPath %>/images/ProReferral-Case-TriagePass.png" alt="">
+                        <img src="{{static}}/images/ProReferral-Case-TriagePass.png" alt="">
                     </div>
                 </div>
             </section>
@@ -81,7 +81,7 @@
                     <p>Pros can hold a conversation with the consumer, quickly reference job details and keep track of the job's status through the messaging screen. They can also schedule appointments and set reminders when an appointment is approaching.</p>
                 </div>
                 <div class="PRProAppMessaging-mock">
-                    <img src="<% assetPath %>/images/ProReferral-Case-WebMessaging.png" alt="">
+                    <img src="{{static}}/images/ProReferral-Case-WebMessaging.png" alt="">
                 </div>
             </section>
 
@@ -91,9 +91,9 @@
                     <p>As part of building the experience on web and app, I created a UI toolkit for designers and helped build the corresponding living style guide for web. The guide includes typography, UI components, iconography, colors and boilerplate code for easings / microinteractions. It is now powering the Pro experience and is being rolled out on the Consumer experience as well.</p>
                 </div>
                 <div id="PRProAppStyleGuide-mock" class="PRProAppStyleGuide-mock">
-                    <img class="PRProAppStyleGuide-screen isActive" src="<% assetPath %>/images/ProReferral-Case-DesignKit1.png" alt="">
-                    <img class="PRProAppStyleGuide-screen" src="<% assetPath %>/images/ProReferral-Case-DesignKit2.png" alt="">
-                    <img class="PRProAppStyleGuide-screen" src="<% assetPath %>/images/ProReferral-Case-DesignKit3.png" alt="">
+                    <img class="PRProAppStyleGuide-screen isActive" src="{{static}}/images/ProReferral-Case-DesignKit1.png" alt="">
+                    <img class="PRProAppStyleGuide-screen" src="{{static}}/images/ProReferral-Case-DesignKit2.png" alt="">
+                    <img class="PRProAppStyleGuide-screen" src="{{static}}/images/ProReferral-Case-DesignKit3.png" alt="">
                 </div>
             </section>
         </div>
@@ -101,7 +101,7 @@
     <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="<% assetPath %>/js/main.js"></script>
+<script src="{{static}}/js/main.js"></script>
 <script>
 function cycleImages() {
     var $active = $('#PRProAppStyleGuide-mock .isActive');
