--- a/projects/registration.html
+++ b/projects/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Redesigning Registration // Eric Skram</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
-    <link rel="stylesheet" href="<% assetPath %>/css/main.css">
+    <link rel="stylesheet" href="{{static}}/css/main.css">
 </head>
 <body>
     <include src="lib/components/header.html"></include>
@@ -16,7 +16,7 @@
             </div>
             <div class="Project-mainPreview Project-mainPreview--Registration">
                 <div class="Project-mainPreviewContainer">
-                    <img src="<% assetPath %>/images/Registration-Case-MainPreview.png" alt="">
+                    <img src="{{static}}/images/Registration-Case-MainPreview.png" alt="">
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                     <p>Unlike Facebook or Instagram, where using the application is the end-goal, this tool is judged by how <em>little</em> time users have to spend completing tasks. Surfacing links for frequently used tools at the top of the page will reduce the amount of searching required to use common functions.</p>
                 </div>
                 <div class="RegistrationDashboard-mock">
-                    <img src="<% assetPath %>/images/Registration-Dashboard.png" alt="">
+                    <img src="{{static}}/images/Registration-Dashboard.png" alt="">
                 </div>
             </section>
 
@@ -49,7 +49,7 @@
                     <p>Returning contextual and relevant search results allows students to make snap judgements and build their schedules more quickly: <em>"Do I need to take this course for my major?"</em> or <em>"Is the class full?"</em></p>
                 </div>
                 <div class="RegistrationSearch-mock">
-                    <img src="<% assetPath %>/images/Registration-Search-Results.png" alt="">
+                    <img src="{{static}}/images/Registration-Search-Results.png" alt="">
                 </div>
             </section>
 
@@ -59,7 +59,7 @@
                     <p>Eligibility for a class is the first deciding factor for students and should be shown accordingly. Next is often how well the class fits in the rest of their schedule. A week preview gives a holistic view of all saved classes, reducing the cognitive load necessary to mentally build their schedule.</p>
                 </div>
                 <div class="RegistrationDetail-mock">
-                    <img src="<% assetPath %>/images/Registration-Detail.png" alt="">
+                    <img src="{{static}}/images/Registration-Detail.png" alt="">
                 </div>
             </section>
         </div>
@@ -67,7 +67,7 @@
     <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="<% assetPath %>/js/main.js"></script>
+<script src="{{static}}/js/main.js"></script>
 <script>
 $(document).ready(function(){
     $(window).scroll(function () {
