Rework image structure & build. Fix a permalink issue.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="ProjectGrid">
             <li class="GridItem GridItem--proreferral">
-                <a class="GridItem-link ProReferral" href="/projects/proreferral/">
+                <a class="GridItem-link ProReferral" href="/proreferral/">
                     <div class="ProReferral-device">
                         <div class="ProReferral-cardArea">
                             <div class="ProReferral-card ProReferral-card--1"></div>
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li class="GridItem GridItem--macys">
-                <a class="GridItem-link Macys" href="/projects/macys/">
+                <a class="GridItem-link Macys" href="/macys/">
                     <div class="Macys-star"></div>
                     <div class="Macys-tooltip"></div>
                     <div class="Macys-bg"></div>
@@ -44,7 +44,7 @@
                 </a>
             </li>
             <li class="GridItem GridItem--registration">
-                <a class="GridItem-link Registration" href="/projects/registration/">
+                <a class="GridItem-link Registration" href="/registration/">
                     <div class="Registration-logo"></div>
                     <div class="Registration-bg"></div>
                     <div class="GridItem-info">
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li class="GridItem GridItem--cfnapa">
-                <a class="GridItem-link CFN" href="/projects/cfnapa/">
+                <a class="GridItem-link CFN" href="/cfnapa/">
                     <div class="CFN-logo"></div>
                         <div class="CFN-scroller"></div>
                     <div class="CFN-bg"></div>
