--- a/projects/cfnapa.html
+++ b/projects/cfnapa.html
@@ -12,12 +12,12 @@
         <div class="Project-heading">
             <div class="Project-hero Project-hero--CFN">
                 <div class="Project-logoContainer">
-                    <img class="Project-logo" src="{{static}}/images/CFN-Thumb-Logo.svg" alt="">
+                    <img class="Project-logo" src="{{static}}/images/cfn/thumb/Logo.svg" alt="">
                 </div>
             </div>
             <div class="Project-mainPreview Project-mainPreview--CFN">
                 <div class="Project-mainPreviewContainer">
-                    <img src="{{static}}/images/CFN-Case-MainPreview.png" alt="">
+                    <img src="{{static}}/images/cfn/case/MainPreview.png" alt="">
                 </div>
             </div>
         </div>
@@ -35,15 +35,15 @@
             </div>
             <section class="Project-block Project-block--hug CFNHome">
                 <div class="CFNHome-item">
-                    <img src="{{static}}/images/CFN-Case-Home.jpg" alt="">
+                    <img src="{{static}}/images/cfn/case/Home.jpg" alt="">
                 </div>
             </section>
             <section class="Project-block CFNSubpages">
                 <div class="CFNSubpages-item">
-                    <img src="{{static}}/images/CFN-Case-CaseStudy.jpg" alt="">
+                    <img src="{{static}}/images/cfn/case/CaseStudy.jpg" alt="">
                 </div>
                 <div class="CFNSubpages-item">
-                    <img src="{{static}}/images/CFN-Case-Detail.jpg" alt="">
+                    <img src="{{static}}/images/cfn/case/Detail.jpg" alt="">
                 </div>
             </section>
         </div>
