Header improvements and some general CSS tidying.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="{{static}}/css/main.css">
 </head>
 <body>
-    <include src="lib/components/header.html"></include>
+    <header class="Header">
+        <include src="lib/components/header.html"></include>
+    </header>
     <div class="Content">
         <div class="Tagline">
             <!-- <h1 class="Tagline-name">Eric Skram</h1> -->
