--- a/projects/cfnapa.html
+++ b/projects/cfnapa.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="{{static}}/css/main.css">
 </head>
 <body>
-    <include src="lib/components/header.html"></include>
+    <header class="Header Header--CFN is-projectPage">
+        <include src="lib/components/header.html"></include>
+    </header>
     <div class="Content">
         <div class="Project-heading">
             <div class="Project-hero Project-hero--CFN">
