Add image expand functionality for mocks.

--- a/projects/macys.html
+++ b/projects/macys.html
@@ -93,28 +93,28 @@
                             <h3>Like / Dislike</h3>
                             <span>Swipe left or right to like / dislike the current product.</span>
                         </figcaption>
-                        <img src="{{static}}/images/macys/case/Discovery1.png" alt="">
+                        <img class="willExpand" src="{{static}}/images/macys/case/Discovery1.png" alt="">
                     </figure>
                     <figure class="MacysDiscovery-mock">
                         <figcaption>
                             <h3>Share</h3>
                             <span>Swipe up to share the product on social media.</span>
                         </figcaption>
-                        <img src="{{static}}/images/macys/case/Discovery2.png" alt="">
+                        <img class="willExpand" src="{{static}}/images/macys/case/Discovery2.png" alt="">
                     </figure>
                     <figure class="MacysDiscovery-mock">
                         <figcaption>
                             <h3>Save</h3>
                             <span>Swipe down to save the product to your wishlist.</span>
                         </figcaption>
-                        <img src="{{static}}/images/macys/case/Discovery3.png" alt="">
+                        <img class="willExpand" src="{{static}}/images/macys/case/Discovery3.png" alt="">
                     </figure>
                     <figure class="MacysDiscovery-mock">
                         <figcaption>
                             <h3>More Info</h3>
                             <span>Tap to get additional info and quick actions.</span>
                         </figcaption>
-                        <img src="{{static}}/images/macys/case/Discovery4.png" alt="">
+                        <img class="willExpand" src="{{static}}/images/macys/case/Discovery4.png" alt="">
                     </figure>
                 </div>
             </section>
@@ -136,7 +136,7 @@
                     <img src="{{static}}/images/macys/case/Map-Mock.jpg" alt="">
                 </div>
                 <div class="MacysMapping-deviceMock">
-                    <img src="{{static}}/images/macys/case/Map-Phone.png" alt="">
+                    <img class="willExpand" src="{{static}}/images/macys/case/Map-Phone.png" alt="">
                 </div>
             </section>
             <section class="Project-block MacysRewards">
@@ -145,14 +145,15 @@
                     <p>The wishlist feature on Macy's.com converts very well, but is underutilized and is even supressed on some platforms. Our idea would be very effective working in tandem with the wishlist and could be used to promote it to a broader audience. We introduced a more robust rewards system for items purchased from the wishlist, using both discounts and experiential prizes.</p>
                 </div>
                 <div class="MacysRewards-mock">
-                    <img src="{{static}}/images/macys/case/Wishlist.png" alt="">
+                    <img class="willExpand" src="{{static}}/images/macys/case/Wishlist.png" alt="">
                 </div>
                 <div class="MacysRewards-mock">
-                    <img src="{{static}}/images/macys/case/Wishlist-Rewards.png" alt="">
+                    <img class="willExpand" src="{{static}}/images/macys/case/Wishlist-Rewards.png" alt="">
                 </div>
             </section>
         </div>
     </div>
+    <include src="lib/components/modal.html"></include>
     <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
