--- a/projects/cfnapa.html
+++ b/projects/cfnapa.html
@@ -50,6 +50,7 @@
             </section>
         </div>
     </div>
+    <include src="lib/components/modal.html"></include>
     <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
