--- a/projects/registration.html
+++ b/projects/registration.html
@@ -41,7 +41,7 @@
                     <p>Unlike Facebook or Instagram, where using the application is the end-goal, this tool is judged by how <em>little</em> time users have to spend completing tasks. Surfacing links for frequently used tools at the top of the page will reduce the amount of searching required to use common functions.</p>
                 </div>
                 <div class="RegistrationDashboard-mock">
-                    <img src="{{static}}/images/registration/case/Dashboard.png" alt="">
+                    <img class="willExpand" src="{{static}}/images/registration/case/Dashboard.png" alt="">
                 </div>
             </section>
 
@@ -51,7 +51,7 @@
                     <p>Returning contextual and relevant search results allows students to make snap judgements and build their schedules more quickly: <em>"Do I need to take this course for my major?"</em> or <em>"Is the class full?"</em></p>
                 </div>
                 <div class="RegistrationSearch-mock">
-                    <img src="{{static}}/images/registration/case/Results.png" alt="">
+                    <img class="willExpand" src="{{static}}/images/registration/case/Results.png" alt="">
                 </div>
             </section>
 
@@ -66,6 +66,7 @@
             </section>
         </div>
     </div>
+    <include src="lib/components/modal.html"></include>
     <include src="lib/components/footer.html"></include>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
